# nano_profit

./: .env.example  .gitignore  Dockerfile  Gemfile  README.md
.kamal/: secrets
app/channels/: organization_channel.rb
app/controllers/: alerts_controller.rb  application_controller.rb  customers_controller.rb  dashboard_controller.rb  documentation_controller.rb  email_verifications_controller.rb  event_types_controller.rb  events_controller.rb  margin_alerts_controller.rb  pages_controller.rb  registrations_controller.rb  sessions_controller.rb  settings_controller.rb  stripe_controller.rb
app/helpers/: application_helper.rb  margin_helper.rb  price_drifts_helper.rb  vendor_rates_helper.rb
app/jobs/: check_all_margin_alerts_job.rb  check_margin_alerts_job.rb  process_event_job.rb  process_usage_telemetry_job.rb  stripe_sync_job.rb
app/mailers/: alert_mailer.rb  application_mailer.rb  user_mailer.rb
app/models/: cost_entry.rb  customer.rb  event.rb  margin_alert.rb  organization.rb  platform_setting.rb  price_drift.rb  stripe_invoice.rb  usage_telemetry_event.rb  user.rb  vendor_rate.rb
app/services/: event_processor.rb  margin_calculator.rb  (+1 more)
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  recurring.yml  routes.rb
db/: schema.rb  seeds.rb
sdks/python/: README.md  pyproject.toml
sdks/python/src/nanoprofit/: __init__.py  client.py  queue.py  serializer.py  types.py
sdks/python/src/nanoprofit/providers/: __init__.py  anthropic.py  google.py  openai.py
test/: business_logic_test.rb  deep_logic_test.rb
(+168 files in other folders)
