[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoprofit"
version = "0.1.0"
description = "NanoProfit SDK for tracking AI usage and revenue"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.25,<1"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy"]

[project.urls]
Homepage = "https://nanoprofit.dev"
Repository = "https://github.com/nanoprofit/nanoprofit-python"
